--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 <div class="col-md-4 col-md-offset-2 text-center">
                     <div class="portfolio-item">
                         <a href="#">
-                            <img class="img-portfolio img-responsive" src="img/portfolio-1.jpg">
+                            <img class="img-portfolio img-responsive" src="images/portfolio-1.jpg">
                         </a>
                         <h4>Cityscape</h4>
                     </div>
@@ -137,7 +137,7 @@
                 <div class="col-md-4 text-center">
                     <div class="portfolio-item">
                         <a href="#">
-                            <img class="img-portfolio img-responsive" src="img/portfolio-2.jpg">
+                            <img class="img-portfolio img-responsive" src="images/portfolio-2.jpg">
                         </a>
                         <h4>Is That On Fire?</h4>
                     </div>
@@ -147,7 +147,7 @@
                 <div class="col-md-4 col-md-offset-2 text-center">
                     <div class="portfolio-item">
                         <a href="#">
-                            <img class="img-portfolio img-responsive" src="img/portfolio-3.jpg">
+                            <img class="img-portfolio img-responsive" src="images/portfolio-3.jpg">
                         </a>
                         <h4>Stop Sign</h4>
                     </div>
@@ -155,7 +155,7 @@
                 <div class="col-md-4 text-center">
                     <div class="portfolio-item">
                         <a href="#">
-                            <img class="img-portfolio img-responsive" src="img/portfolio-4.jpg">
+                            <img class="img-portfolio img-responsive" src="images/portfolio-4.jpg">
                         </a>
                         <h4>Narrow Focus</h4>
                     </div>
